# bear

./: .gitignore  Cargo.toml  README.md  mkdocs.yml  pyproject.toml
.bear/: .gitignore
.github/workflows/: ci.yaml  documentation.yaml
docs/: .gitignore  _quarto.yml  index.md  index.qmd
docs/reference/: expression.md  providers.md  schema.md
scripts/: workflow.py
src/: lib.rs
src/bear/: __init__.py
src/bear/_plugins/: __init__.py
src/bear/cli/: __main__.py  conflate.py  conform.py  entrypoint.py
src/bear/core/: fips.py  schema.py
src/bear/core/static/: fips.geojson.gz.properties
src/bear/expr/: __init__.py  _correspondence.py
src/bear/providers/: __init__.py  provider_microsoft.py  provider_nad.py  provider_openaddresses.py  provider_openstreetmap.py  provider_usa_structures.py  registry.py
src/bear/typing/: __init__.py
src/plugins/: corresponds.rs  geoarray.rs  intersects.rs  mod.rs  utils.rs
tests/: test_fips.py
