[package]
name = "bear"
version = "0.1.0"
edition = "2021"

[lib]
name = "_plugins"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
geos = { version = "9.1.1", features = ["static"] }
polars = { version = "*", features=["performant", "cse"]  }
polars-arrow = { version = "*" }
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.22.4", features = ["extension-module", "abi3-py39"] }
pyo3-polars = { version = "*", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
