[package]
name = "bear"
version = "0.1.0"
edition = "2021"

[lib]
name = "_plugins"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
geo = { version = "0.29.3", features = ["use-proj"] }
geo-index = { version = "0.2.0", features = ["rayon"] }
geo-traits = "0.2.0"
geos = { version = "9.1.1", features = ["static"] }
geozero = { version = "0.14.0", features = ["with-geos", "with-wkb"] }
open-location-code = { git = "https://github.com/google/open-location-code", branch = "main" }
polars = { version = "*", features=["performant", "cse"]  }
polars-arrow = { version = "*" }
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.22.4", features = ["extension-module", "abi3-py39"] }
pyo3-polars = { version = "*", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
wkb = "0.8.0"
