[project]
name = "bear"
description = "Built Environment Asset Registry (BEAR)"
dynamic = ["version"]
authors = [
    { name = "Justin Singh-Mohudpur", email = "justin.singh-mohudpur@noaa.gov" },
    { name = "Mike Johnson", email = "mike.johnson@noaa.gov" }
]
requires-python = ">=3.9"
dependencies = [
    "geopandas>=1.0.1",
    "polars>=1.20.0",
    "pyarrow>=19.0.0",
    "shapely>=2.0.6",
]

[project.urls]
Repository = "https://github.com/owp-spatial/bear"
Issues = "https://github.com/owp-spatial/bear/issues"

[tool.maturin]
module-name = "bear._core"
python-packages = ["bear"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pyarrow-stubs>=17.16",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"
testpaths = "tests"

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.format]
quote-style = "double"
