[project]
name = "bear"
description = "Built Environment Asset Registry (BEAR)"
readme = "README.md"
dynamic = ["version"]
authors = [
    { name = "Justin Singh-Mohudpur", email = "justin.singh-mohudpur@noaa.gov" },
    { name = "Mike Johnson", email = "mike.johnson@noaa.gov" }
]
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.0.1",
    "polars-hash>=0.5.2",
    "polars>=1.20.0",
    "pyarrow>=19.0.0",
    "shapely>=2.0.6",
    "polars-u64-idx>=1.20.0",
    "pyogrio",
    "pyproj>=3.7.0",
    "usaddress-scourgify>=0.6.0",
]

[project.urls]
Repository = "https://github.com/owp-spatial/bear"
Issues = "https://github.com/owp-spatial/bear/issues"

[project.scripts]
bear = "bear.cli.entrypoint:cli"

[tool.maturin]
module-name = "bear._plugins"
python-packages = ["bear"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pyarrow-stubs>=17.16",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]
cli = [
    "prefect>=3.1.13",
    "typer>=0.15.1",
]
docs = [
    "markdown>=3.7",
    "mkdocs-material>=9.6.2",
    "mkdocstrings>=0.28.0",
    "mkdocstrings-python>=1.14.4",
    "pymdown-extensions>=10.14.3",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"
testpaths = "tests"

[tool.uv]
required-version = ">=0.5.0"
package = true

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.format]
quote-style = "double"
